massive overhaul in how it works.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "bitmatch"
+name = "bitmatch-proc"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 macros = {path = "macros"}
+
+[workspace]
+exclude = [
+    "example"
+]
